// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner snapshot constrain 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-slate-700"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  />
  <div
    class="flex-1"
  />
</div>
`;

exports[`Banner snapshot default 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-slate-700"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  />
  <div
    class="flex-1"
  />
</div>
`;

exports[`Banner snapshot offer dismiss 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-slate-700"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  />
  <div
    class="flex-1"
  />
  <button
    class="text-sm pl-2 bg-transparent border-0 cursor-pointer text-dark-link font-normal"
    data-test="Banner-closeButton"
  >
    Dismiss
  </button>
</div>
`;

exports[`Banner snapshot variant error 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-red-600"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  >
    <svg
      class="block text-red-700 w-2.5 h-2.5"
      viewBox="0 0 10 10"
    >
      <path
        d="M9.802 2.108a.675.675 0 0 0 0-.955L8.847.198a.675.675 0 0 0-.956 0L5.08 3.01a.113.113 0 0 1-.159 0L2.108.198a.675.675 0 0 0-.955 0l-.955.955a.675.675 0 0 0 0 .955L3.01 4.92a.113.113 0 0 1 0 .16L.198 7.892a.675.675 0 0 0 0 .955l.955.955a.675.675 0 0 0 .955 0L4.92 6.99a.113.113 0 0 1 .16 0l2.81 2.812a.675.675 0 0 0 .956 0l.955-.955a.675.675 0 0 0 0-.955L6.99 5.08a.113.113 0 0 1 0-.16l2.812-2.812z"
        fill="currentColor"
      />
    </svg>
  </aside>
  <div
    class="flex-1"
  />
</div>
`;

exports[`Banner snapshot variant success 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-green-500"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  />
  <div
    class="flex-1"
  />
</div>
`;

exports[`Banner snapshot variant warning 1`] = `
<div
  class="text-md font-medium rounded relative p-4 mb-2 border-solid border-0 border-t-4 w-full bg-blue-100 shadow-sm flex flex-row justify-start items-center overflow-hidden max-w-screen-desktop border-orange-300"
  data-test="Banner"
  role="alert"
>
  <aside
    class="mr-2 ml-1"
  />
  <div
    class="flex-1"
  />
</div>
`;
